# rust-e-commerce-microservice

./: .gitignore  CLAUDE.md  Cargo.toml
bruno/rust-ecommerce/: Auth - Login.yml  Auth - Logout.yml  Auth - Refresh Token.yml  Auth - Register.yml  Auth - User Info.yml  Order - Cancel Order.yml  Order - Create Order.yml  Order - Get Order by id.yml  Order - Get Order list.yml  Order - Update Order status.yml  Product - Create Product.yml  Product - Delete Product.yml  Product - Get Product by Id.yml  Product - Get Product list.yml  Product - Update Product.yml  opencollection.yml
bruno/rust-ecommerce/api-gateway/: Create Order.yml  Create Product.yml  Get Order by id.yml  Get Order list.yml  Get Product by id.yml  Get Product list.yml  Login.yml  Refresh Token.yml  Register.yml  Update Product by id.yml  (+2 more)
common-libs/: Cargo.toml  build.rs
common-libs/proto/: auth.proto  order.proto  product.proto
common-libs/src/: events.rs  lib.rs
infrastructure/: .env  .env.example  docker-compose.yml
infrastructure/k8s/: PODMAN_SETUP.md  README.md  SETUP_GUIDE.md  configmap.yaml  kustomization.yaml  secrets.yaml  skaffold.yaml
services/api-gateway/: .env  .env.example  Cargo.toml  Dockerfile  README.md
services/api-gateway/src/: config.rs  error.rs  main.rs  middleware.rs
services/api-gateway/src/handlers/: auth.rs  mod.rs  order.rs  product.rs
services/auth-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
services/auth-service/.sqlx/: query-03c7cd8fea312f03b3802d101cb14abac4049723909ee4c5bddb0820becd8c42.json  query-0530596be3029cd00a35772165853d028f171c9e8d1ba189767e61249a6579ab.json  query-0603de7e1d0e7f33cb5a185b6fca84b2349de20959a3e33f2cd27c88c0abde75.json  query-37505a8ddc85e294973dc32c0efed51228656b40d8b746ac410b226f580f51f2.json  query-634f4ea7c2d8108374d617d709a475d2a185c7e7d73f6b4df98d7644778d6726.json  query-72521ceaf4a4188394d67f169017dfae54fb0b01b3ebf9c45bae8c12095bc651.json  query-a4218deea5ba305ee75fc12b7de94c1a4c86671075b6619d6011691257cb8c68.json  query-d9747be32a566be09d28c6a493f00011461996982a348ac212d70bfdfef4d234.json  query-e0fdaa35fa1af8ed7f26362c7af4cb73cfba1886cbb5fac1aeacad064f654c8e.json  query-ef27e2b5000e373baea814c65706abe81f6a8e0f6da289487abdf03c031e9846.json  query-f2d80be6b2978907b2bc9b263aeac25401aa5214f1c20880bdd2c8765c96fded.json  query-f391070c4d696ccb78a6616d1cb6af43efa5eff7a38f3bdc952305bb5411f49b.json
services/auth-service/migrations/: 20260501000001_create_users_table.up.sql  20260501000002_create_refresh_tokens_table.down.sql  20260501000002_create_refresh_tokens_table.up.sql  README.md
services/auth-service/src/: config.rs  lib.rs  main.rs  models.rs  server.rs  state.rs  utils.rs
services/auth-service/src/domain/: errors.rs
services/auth-service/src/repositories/: mod.rs  refresh_token_repository.rs  user_repository.rs
services/auth-service/src/services/: auth_service.rs
services/order-service/: .env  .env.example  Cargo.toml  Dockerfile
services/order-service/migrations/: 20260510000001_create_orders_table.sql  20260511000001_change_status_to_enum.sql  20260511000002_add_cancellation_reason.sql
services/order-service/src/: db.rs  main.rs
services/order-service/src/domain/: errors.rs  mod.rs  models.rs
services/order-service/src/events/: producer.rs
services/order-service/src/repository/: mod.rs  order.rs
services/order-service/src/services/: mod.rs  order_service.rs
services/product-service/: .env  .env.example  Cargo.toml  Dockerfile
(+28 files in other folders)
