[package]
name = "common-libs"
version = "0.1.0"
edition = "2024"


[dependencies]
prost = "0.14.3"
tonic = "0.14.5"
tonic-prost = "0.14.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v7"] }

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
