[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
common-libs = { path = "../../common-libs" }

# Async runtime
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"

# gRPC
tonic = "0.14.5"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "chrono",
    "uuid",
    "migrate",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
regex = "1.12.3"
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Security
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9.3"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

[[bin]]
name = "auth-service"
path = "src/main.rs"
