[package]
name = "order-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "chrono",
    "uuid",
    "migrate",
    "macros",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# gRPC
tonic = "0.14"
prost = "0.14"
common-libs = { path = "../../common-libs" }

[[bin]]
name = "order-service"
path = "src/main.rs"
